<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="first_app_name">SPOTIFY STREAMER</string>
    <string name="second_app_name">SCORES APP</string>
    <string name="third_app_name">LIBRARY APP</string>
    <string name="forth_app_name">BUILD IT BIGGER</string>
    <string name="fifth_app_name">XYZ READER</string>
    <string name="sixth_app_name">CAPSTONE: MY OWN APP</string>
</resources>
