<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAppBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20px"
            android:layout_marginBottom="40px"
            android:textSize="70px"
            android:textColor="@color/colorBlack"
            android:text="My Nanodegree Apps!" />
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorUdacity"
            android:layout_gravity="center"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            android:layout_marginLeft="120px"
            android:layout_marginRight="120px"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/first_app_name"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorUdacity"
            android:layout_gravity="center"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            android:layout_marginLeft="120px"
            android:layout_marginRight="120px"
            android:text="@string/second_app_name"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorUdacity"
            android:layout_gravity="center"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            android:layout_marginLeft="120px"
            android:layout_marginRight="120px"
            android:text="@string/third_app_name"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorUdacity"
            android:layout_gravity="center"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            android:layout_marginLeft="120px"
            android:layout_marginRight="120px"
            android:text="@string/forth_app_name"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorUdacity"
            android:layout_gravity="center"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            android:layout_marginLeft="120px"
            android:layout_marginRight="120px"
            android:text="@string/fifth_app_name"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            android:layout_marginLeft="120px"
            android:layout_marginRight="120px"
            android:text="@string/sixth_app_name"/>
    </LinearLayout>
</RelativeLayout>
